--- a/index.html
+++ b/index.html
@@ -1,5 +1,32 @@
+<!DOCTYPE html>
 <html>
+<head>
+    <title>KCMerge</title>
+    <link rel="stylesheet" type="text/css" href="./src/main.css">
+</head>
 <body>
-<h1>Hello world</h1>
+    <h1>KCMerge 2.0</h1>
+    <div>
+        Send files
+        <input type="file" id="uploader" accept="image/*" multiple />
+        <button id="btn-submit">Submit</button>
+    </div>
+    <div>
+        Predefined mode: 
+        <select id="select-mode">
+            <option value="hl">Horizontal line</option>
+            <option value="hw">Horizontal wrap</option>
+            <option value="vl">Vertical line</option>
+            <option value="vw">Vertical wrap</option>
+            <option value="cs">Custom select</option>
+        </select>
+        <input type="number" id="row-number" value="2" disabled />
+    </div>
+    <div>
+        <img id="image-preview" src="" style="max-width:70%;" alt="Result Preview" hidden>
+        <div id="result-field"></div>
+    </div>
+
+    <script src="./src/main.js"></script>
 </body>
 </html>
